--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.14.0",
+    "argon2": "^0.30.3",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
