--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "argon2": "^0.30.3",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
