added few authentications

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "formik": "^2.4.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
+    "react-session-api": "^1.1.0",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
     "react-visibility-sensor": "^5.1.1",
