--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
