--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@google-cloud/storage": "^6.12.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,12 +16,16 @@
     "@testing-library/user-event": "^13.5.0",
     "argon2": "^0.30.3",
     "axios": "^1.4.0",
+    "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ethers": "5.7",
     "formik": "^2.4.2",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +38,7 @@
     "react-spring": "^9.7.1",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "stream": "^0.0.2",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
