--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
