--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "argon2": "^0.30.3",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
