--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "slick-carousel": "^1.8.1",
     "stream": "^0.0.2",
     "tailwindcss": "^3.3.2",
+    "vercel": "^31.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
